TrafficManage/VirtualService/example.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: forecast
  namespace: weather
spec:
  hosts:
  - forecast
  - example.com
  http:
  - match:
    - header:
        location:
          exact: north
      url:
        prefix: "/advertisement"
      ignoreUriCase: true
    - url:
        prefix: "/forecast"
    rewrite:
      uri: "/newcatalog"
    route:
    - destination:
        host: forecast #forecast.weather.svc.cluster.localkb 
        subset: v2
  - route:
    - destination:
        host: forecast 
        subset: v1
      weight: 20 # 权重
    - destination:
        host: forecast
        subset: v1
      weight: 80
  - timeout: 5s
    route:
    - destination:
        host: wikipedia.org  #ServiceEntry
  - match:
    - sourceLabels:
        env: prod
    route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v1
    fault:
      delay:
        percentage:
          value: 0.1
        fixedDelay: 5s
  - match:
    - uri:
        exact: /v1/getProductRatings
    redirect:
      uri: /v1/bookRatings
      authority: newratings.default.svc.cluster.local
  - route:
    - destination:
        host: ratings.prod.svc.cluster.local
        subset: v1
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
  - match:
    - uri:
        prefix: /ratings
    rewrite:
      uri: /v1/bookRatings
    route:
    - destination:
        host: ratings.prod.svc.cluster.local
        subset: v1
  - match:
    - port: 27017
    route:
    - destination:
        host: mongo.backup.svc.cluster.local
        port:
          number: 5555
  - route:
    - destination:
        host: ratings.prod.svc.cluster.local
        subset: v1
    corsPolicy:
      allowOrigin:
      - example.com  # 允许来自example.com的get和post请求
      allowMethods:
      - POST
      - GET
      allowCredentials: false
      allowHeaders:
      - X-Foo-Bar
      maxAge: "24h"
